kubernetes/infra/network/cilium-gateway/_base/external.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.69.8"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
    - name: http-phela
      protocol: HTTP
      port: 80
      hostname: "phela-intelligence.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-phela
      protocol: HTTPS
      port: 443
      hostname: "phela-intelligence.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: phela-production-tls
