kubernetes/infra/network/cilium-gateway/_base/httproute-301-http.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  # hostnames:
  #   - "phela-intelligence.com"
  #   - "*.phela-intelligence.com"
  parentRefs:
    - name: internal
      sectionName: http
    - name: external
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # optional; default is 302
